parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> s
Rule 1     s -> sl
Rule 2     sl -> sentence
Rule 3     empty -> <empty>
Rule 4     sl -> sl sentence
Rule 5     sentence -> aim_condition sub_pred DOT
Rule 6     aim_condition -> empty
Rule 7     aim_condition -> aim_condition_prep sub_pred COMMA
Rule 8     aim_condition_prep -> IF
Rule 9     aim_condition_prep -> FOR
Rule 10    sub_pred -> sub pred
Rule 11    sub -> name
Rule 12    name -> prop_noun aggregate_material_loc_part_except
Rule 13    prop_noun -> prop NOUN prop
Rule 14    op -> AND
Rule 15    op -> OR
Rule 16    op -> DASH
Rule 17    prop -> empty
Rule 18    prop -> ADJF prop
Rule 19    prop -> LPAREN prop op prop RPAREN prop
Rule 20    aggregate_material_loc_part_except -> aggregate material loc part except
Rule 21    prop_gent -> empty
Rule 22    prop_gent -> ADJF_gent prop_gent
Rule 23    prop_ablt -> empty
Rule 24    prop_ablt -> ADJF_ablt prop_ablt
Rule 25    prop_ablt -> LCURLYBRACE prop_ablt op prop_ablt RCURLYBRACE prop_ablt
Rule 26    aggregate -> empty
Rule 27    aggregate -> prop_gent Gent_noun_prtf__plur aggregate
Rule 28    aggregate -> LSBRACKET aggregate op aggregate RSBRACKET aggregate
Rule 29    material -> empty
Rule 30    material -> FROM prop_gent Gent_noun_prtf__plur
Rule 31    loc -> empty
Rule 32    loc -> LOC_PREP prop_name aggregate
Rule 33    part -> empty
Rule 34    part -> prep_part prop_name part
Rule 35    prop_name -> prop_noun
Rule 36    prop_name -> prop_gent Gent_noun_prtf__plur
Rule 37    prop_name -> prop_gent Loct
Rule 38    prop_name -> prop_ablt Ablt prop_ablt
Rule 39    prep_part -> WITH
Rule 40    prep_part -> WITHOUT
Rule 41    except -> empty
Rule 42    except -> EXCEPT aggregate
Rule 43    pred -> empty
Rule 44    pred -> quality feature obj_instr
Rule 45    quality -> empty
Rule 46    quality -> ADVB
Rule 47    feature -> act
Rule 48    feature -> relation
Rule 49    act -> VERB
Rule 50    act -> INFN
Rule 51    act -> PRTS
Rule 52    act -> PRCL
Rule 53    relation -> COMP
Rule 54    obj_instr -> obj instr
Rule 55    obj -> empty
Rule 56    obj -> obj_loc obj_name
Rule 57    obj -> obj_name
Rule 58    obj_loc -> LOC_PREP
Rule 59    obj_loc -> FROM
Rule 60    obj_name -> name
Rule 61    obj_name -> prop_gent Gent_noun_prtf__plur aggregate_material_loc_part_except
Rule 62    instr -> empty
Rule 63    instr -> Ablt prop_ablt

Terminals, with rules where they appear

ADJF                 : 18
ADJF_ablt            : 24
ADJF_gent            : 22
ADVB                 : 46
AND                  : 14
Ablt                 : 38 63
COMMA                : 7
COMP                 : 53
DASH                 : 16
DOT                  : 5
EXCEPT               : 42
FOR                  : 9
FROM                 : 30 59
Gent_noun_prtf__plur : 27 30 36 61
IF                   : 8
INFN                 : 50
LCURLYBRACE          : 25
LOC_PREP             : 32 58
LPAREN               : 19
LSBRACKET            : 28
Loct                 : 37
NOUN                 : 13
OR                   : 15
PRCL                 : 52
PRTS                 : 51
RCURLYBRACE          : 25
RPAREN               : 19
RSBRACKET            : 28
VERB                 : 49
WITH                 : 39
WITHOUT              : 40
error                : 

Nonterminals, with rules where they appear

act                  : 47
aggregate            : 20 27 28 28 28 32 42
aggregate_material_loc_part_except : 12 61
aim_condition        : 5
aim_condition_prep   : 7
empty                : 6 17 21 23 26 29 31 33 41 43 45 55 62
except               : 20
feature              : 44
instr                : 54
loc                  : 20
material             : 20
name                 : 11 60
obj                  : 54
obj_instr            : 44
obj_loc              : 56
obj_name             : 56 57
op                   : 19 25 28
part                 : 20 34
pred                 : 10
prep_part            : 34
prop                 : 13 13 18 19 19 19
prop_ablt            : 24 25 25 25 38 38 63
prop_gent            : 22 27 30 36 37 61
prop_name            : 32 34
prop_noun            : 12 35
quality              : 44
relation             : 48
s                    : 0
sentence             : 2 4
sl                   : 1 4
sub                  : 10
sub_pred             : 5 7

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . sl
    (2) sl -> . sentence
    (4) sl -> . sl sentence
    (5) sentence -> . aim_condition sub_pred DOT
    (6) aim_condition -> . empty
    (7) aim_condition -> . aim_condition_prep sub_pred COMMA
    (3) empty -> .
    (8) aim_condition_prep -> . IF
    (9) aim_condition_prep -> . FOR

    ADJF            reduce using rule 3 (empty -> .)
    LPAREN          reduce using rule 3 (empty -> .)
    NOUN            reduce using rule 3 (empty -> .)
    IF              shift and go to state 7
    FOR             shift and go to state 8

    s                              shift and go to state 1
    sl                             shift and go to state 2
    sentence                       shift and go to state 3
    aim_condition                  shift and go to state 4
    empty                          shift and go to state 5
    aim_condition_prep             shift and go to state 6

state 1

    (0) S' -> s .



state 2

    (1) s -> sl .
    (4) sl -> sl . sentence
    (5) sentence -> . aim_condition sub_pred DOT
    (6) aim_condition -> . empty
    (7) aim_condition -> . aim_condition_prep sub_pred COMMA
    (3) empty -> .
    (8) aim_condition_prep -> . IF
    (9) aim_condition_prep -> . FOR

    $end            reduce using rule 1 (s -> sl .)
    ADJF            reduce using rule 3 (empty -> .)
    LPAREN          reduce using rule 3 (empty -> .)
    NOUN            reduce using rule 3 (empty -> .)
    IF              shift and go to state 7
    FOR             shift and go to state 8

    sentence                       shift and go to state 9
    aim_condition                  shift and go to state 4
    empty                          shift and go to state 5
    aim_condition_prep             shift and go to state 6

state 3

    (2) sl -> sentence .

    IF              reduce using rule 2 (sl -> sentence .)
    FOR             reduce using rule 2 (sl -> sentence .)
    ADJF            reduce using rule 2 (sl -> sentence .)
    LPAREN          reduce using rule 2 (sl -> sentence .)
    NOUN            reduce using rule 2 (sl -> sentence .)
    $end            reduce using rule 2 (sl -> sentence .)


state 4

    (5) sentence -> aim_condition . sub_pred DOT
    (10) sub_pred -> . sub pred
    (11) sub -> . name
    (12) name -> . prop_noun aggregate_material_loc_part_except
    (13) prop_noun -> . prop NOUN prop
    (17) prop -> . empty
    (18) prop -> . ADJF prop
    (19) prop -> . LPAREN prop op prop RPAREN prop
    (3) empty -> .

    ADJF            shift and go to state 16
    LPAREN          shift and go to state 17
    NOUN            reduce using rule 3 (empty -> .)

    sub_pred                       shift and go to state 10
    sub                            shift and go to state 11
    name                           shift and go to state 12
    prop_noun                      shift and go to state 13
    prop                           shift and go to state 14
    empty                          shift and go to state 15

state 5

    (6) aim_condition -> empty .

    ADJF            reduce using rule 6 (aim_condition -> empty .)
    LPAREN          reduce using rule 6 (aim_condition -> empty .)
    NOUN            reduce using rule 6 (aim_condition -> empty .)


state 6

    (7) aim_condition -> aim_condition_prep . sub_pred COMMA
    (10) sub_pred -> . sub pred
    (11) sub -> . name
    (12) name -> . prop_noun aggregate_material_loc_part_except
    (13) prop_noun -> . prop NOUN prop
    (17) prop -> . empty
    (18) prop -> . ADJF prop
    (19) prop -> . LPAREN prop op prop RPAREN prop
    (3) empty -> .

    ADJF            shift and go to state 16
    LPAREN          shift and go to state 17
    NOUN            reduce using rule 3 (empty -> .)

    sub_pred                       shift and go to state 18
    sub                            shift and go to state 11
    name                           shift and go to state 12
    prop_noun                      shift and go to state 13
    prop                           shift and go to state 14
    empty                          shift and go to state 15

state 7

    (8) aim_condition_prep -> IF .

    ADJF            reduce using rule 8 (aim_condition_prep -> IF .)
    LPAREN          reduce using rule 8 (aim_condition_prep -> IF .)
    NOUN            reduce using rule 8 (aim_condition_prep -> IF .)


state 8

    (9) aim_condition_prep -> FOR .

    ADJF            reduce using rule 9 (aim_condition_prep -> FOR .)
    LPAREN          reduce using rule 9 (aim_condition_prep -> FOR .)
    NOUN            reduce using rule 9 (aim_condition_prep -> FOR .)


state 9

    (4) sl -> sl sentence .

    IF              reduce using rule 4 (sl -> sl sentence .)
    FOR             reduce using rule 4 (sl -> sl sentence .)
    ADJF            reduce using rule 4 (sl -> sl sentence .)
    LPAREN          reduce using rule 4 (sl -> sl sentence .)
    NOUN            reduce using rule 4 (sl -> sl sentence .)
    $end            reduce using rule 4 (sl -> sl sentence .)


state 10

    (5) sentence -> aim_condition sub_pred . DOT

    DOT             shift and go to state 19


state 11

    (10) sub_pred -> sub . pred
    (43) pred -> . empty
    (44) pred -> . quality feature obj_instr
    (3) empty -> .
    (45) quality -> . empty
    (46) quality -> . ADVB

    DOT             reduce using rule 3 (empty -> .)
    COMMA           reduce using rule 3 (empty -> .)
    VERB            reduce using rule 3 (empty -> .)
    INFN            reduce using rule 3 (empty -> .)
    PRTS            reduce using rule 3 (empty -> .)
    PRCL            reduce using rule 3 (empty -> .)
    COMP            reduce using rule 3 (empty -> .)
    ADVB            shift and go to state 23

    pred                           shift and go to state 20
    empty                          shift and go to state 21
    quality                        shift and go to state 22

state 12

    (11) sub -> name .

    ADVB            reduce using rule 11 (sub -> name .)
    VERB            reduce using rule 11 (sub -> name .)
    INFN            reduce using rule 11 (sub -> name .)
    PRTS            reduce using rule 11 (sub -> name .)
    PRCL            reduce using rule 11 (sub -> name .)
    COMP            reduce using rule 11 (sub -> name .)
    DOT             reduce using rule 11 (sub -> name .)
    COMMA           reduce using rule 11 (sub -> name .)


state 13

    (12) name -> prop_noun . aggregate_material_loc_part_except
    (20) aggregate_material_loc_part_except -> . aggregate material loc part except
    (26) aggregate -> . empty
    (27) aggregate -> . prop_gent Gent_noun_prtf__plur aggregate
    (28) aggregate -> . LSBRACKET aggregate op aggregate RSBRACKET aggregate
    (3) empty -> .
    (21) prop_gent -> . empty
    (22) prop_gent -> . ADJF_gent prop_gent

    LSBRACKET       shift and go to state 28
    FROM            reduce using rule 3 (empty -> .)
    LOC_PREP        reduce using rule 3 (empty -> .)
    WITH            reduce using rule 3 (empty -> .)
    WITHOUT         reduce using rule 3 (empty -> .)
    EXCEPT          reduce using rule 3 (empty -> .)
    ADVB            reduce using rule 3 (empty -> .)
    VERB            reduce using rule 3 (empty -> .)
    INFN            reduce using rule 3 (empty -> .)
    PRTS            reduce using rule 3 (empty -> .)
    PRCL            reduce using rule 3 (empty -> .)
    COMP            reduce using rule 3 (empty -> .)
    DOT             reduce using rule 3 (empty -> .)
    COMMA           reduce using rule 3 (empty -> .)
    Ablt            reduce using rule 3 (empty -> .)
    Gent_noun_prtf__plur reduce using rule 3 (empty -> .)
    ADJF_gent       shift and go to state 29

    aggregate_material_loc_part_except shift and go to state 24
    aggregate                      shift and go to state 25
    empty                          shift and go to state 26
    prop_gent                      shift and go to state 27

state 14

    (13) prop_noun -> prop . NOUN prop

    NOUN            shift and go to state 30


state 15

    (17) prop -> empty .

    NOUN            reduce using rule 17 (prop -> empty .)
    AND             reduce using rule 17 (prop -> empty .)
    OR              reduce using rule 17 (prop -> empty .)
    DASH            reduce using rule 17 (prop -> empty .)
    LSBRACKET       reduce using rule 17 (prop -> empty .)
    ADJF_gent       reduce using rule 17 (prop -> empty .)
    FROM            reduce using rule 17 (prop -> empty .)
    LOC_PREP        reduce using rule 17 (prop -> empty .)
    WITH            reduce using rule 17 (prop -> empty .)
    WITHOUT         reduce using rule 17 (prop -> empty .)
    EXCEPT          reduce using rule 17 (prop -> empty .)
    Gent_noun_prtf__plur reduce using rule 17 (prop -> empty .)
    ADVB            reduce using rule 17 (prop -> empty .)
    VERB            reduce using rule 17 (prop -> empty .)
    INFN            reduce using rule 17 (prop -> empty .)
    PRTS            reduce using rule 17 (prop -> empty .)
    PRCL            reduce using rule 17 (prop -> empty .)
    COMP            reduce using rule 17 (prop -> empty .)
    DOT             reduce using rule 17 (prop -> empty .)
    COMMA           reduce using rule 17 (prop -> empty .)
    Ablt            reduce using rule 17 (prop -> empty .)
    RPAREN          reduce using rule 17 (prop -> empty .)


state 16

    (18) prop -> ADJF . prop
    (17) prop -> . empty
    (18) prop -> . ADJF prop
    (19) prop -> . LPAREN prop op prop RPAREN prop
    (3) empty -> .

    ADJF            shift and go to state 16
    LPAREN          shift and go to state 17
    NOUN            reduce using rule 3 (empty -> .)
    AND             reduce using rule 3 (empty -> .)
    OR              reduce using rule 3 (empty -> .)
    DASH            reduce using rule 3 (empty -> .)
    LSBRACKET       reduce using rule 3 (empty -> .)
    ADJF_gent       reduce using rule 3 (empty -> .)
    FROM            reduce using rule 3 (empty -> .)
    LOC_PREP        reduce using rule 3 (empty -> .)
    WITH            reduce using rule 3 (empty -> .)
    WITHOUT         reduce using rule 3 (empty -> .)
    EXCEPT          reduce using rule 3 (empty -> .)
    Gent_noun_prtf__plur reduce using rule 3 (empty -> .)
    ADVB            reduce using rule 3 (empty -> .)
    VERB            reduce using rule 3 (empty -> .)
    INFN            reduce using rule 3 (empty -> .)
    PRTS            reduce using rule 3 (empty -> .)
    PRCL            reduce using rule 3 (empty -> .)
    COMP            reduce using rule 3 (empty -> .)
    DOT             reduce using rule 3 (empty -> .)
    COMMA           reduce using rule 3 (empty -> .)
    Ablt            reduce using rule 3 (empty -> .)
    RPAREN          reduce using rule 3 (empty -> .)

    prop                           shift and go to state 31
    empty                          shift and go to state 15

state 17

    (19) prop -> LPAREN . prop op prop RPAREN prop
    (17) prop -> . empty
    (18) prop -> . ADJF prop
    (19) prop -> . LPAREN prop op prop RPAREN prop
    (3) empty -> .

    ADJF            shift and go to state 16
    LPAREN          shift and go to state 17
    AND             reduce using rule 3 (empty -> .)
    OR              reduce using rule 3 (empty -> .)
    DASH            reduce using rule 3 (empty -> .)

    prop                           shift and go to state 32
    empty                          shift and go to state 15

state 18

    (7) aim_condition -> aim_condition_prep sub_pred . COMMA

    COMMA           shift and go to state 33


state 19

    (5) sentence -> aim_condition sub_pred DOT .

    IF              reduce using rule 5 (sentence -> aim_condition sub_pred DOT .)
    FOR             reduce using rule 5 (sentence -> aim_condition sub_pred DOT .)
    ADJF            reduce using rule 5 (sentence -> aim_condition sub_pred DOT .)
    LPAREN          reduce using rule 5 (sentence -> aim_condition sub_pred DOT .)
    NOUN            reduce using rule 5 (sentence -> aim_condition sub_pred DOT .)
    $end            reduce using rule 5 (sentence -> aim_condition sub_pred DOT .)


state 20

    (10) sub_pred -> sub pred .

    DOT             reduce using rule 10 (sub_pred -> sub pred .)
    COMMA           reduce using rule 10 (sub_pred -> sub pred .)


state 21

    (43) pred -> empty .
    (45) quality -> empty .

    DOT             reduce using rule 43 (pred -> empty .)
    COMMA           reduce using rule 43 (pred -> empty .)
    VERB            reduce using rule 45 (quality -> empty .)
    INFN            reduce using rule 45 (quality -> empty .)
    PRTS            reduce using rule 45 (quality -> empty .)
    PRCL            reduce using rule 45 (quality -> empty .)
    COMP            reduce using rule 45 (quality -> empty .)


state 22

    (44) pred -> quality . feature obj_instr
    (47) feature -> . act
    (48) feature -> . relation
    (49) act -> . VERB
    (50) act -> . INFN
    (51) act -> . PRTS
    (52) act -> . PRCL
    (53) relation -> . COMP

    VERB            shift and go to state 37
    INFN            shift and go to state 38
    PRTS            shift and go to state 39
    PRCL            shift and go to state 40
    COMP            shift and go to state 41

    feature                        shift and go to state 34
    act                            shift and go to state 35
    relation                       shift and go to state 36

state 23

    (46) quality -> ADVB .

    VERB            reduce using rule 46 (quality -> ADVB .)
    INFN            reduce using rule 46 (quality -> ADVB .)
    PRTS            reduce using rule 46 (quality -> ADVB .)
    PRCL            reduce using rule 46 (quality -> ADVB .)
    COMP            reduce using rule 46 (quality -> ADVB .)


state 24

    (12) name -> prop_noun aggregate_material_loc_part_except .

    ADVB            reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)
    VERB            reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)
    INFN            reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)
    PRTS            reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)
    PRCL            reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)
    COMP            reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)
    DOT             reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)
    COMMA           reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)
    Ablt            reduce using rule 12 (name -> prop_noun aggregate_material_loc_part_except .)


state 25

    (20) aggregate_material_loc_part_except -> aggregate . material loc part except
    (29) material -> . empty
    (30) material -> . FROM prop_gent Gent_noun_prtf__plur
    (3) empty -> .

    FROM            shift and go to state 44
    LOC_PREP        reduce using rule 3 (empty -> .)
    WITH            reduce using rule 3 (empty -> .)
    WITHOUT         reduce using rule 3 (empty -> .)
    EXCEPT          reduce using rule 3 (empty -> .)
    ADVB            reduce using rule 3 (empty -> .)
    VERB            reduce using rule 3 (empty -> .)
    INFN            reduce using rule 3 (empty -> .)
    PRTS            reduce using rule 3 (empty -> .)
    PRCL            reduce using rule 3 (empty -> .)
    COMP            reduce using rule 3 (empty -> .)
    DOT             reduce using rule 3 (empty -> .)
    COMMA           reduce using rule 3 (empty -> .)
    Ablt            reduce using rule 3 (empty -> .)

    material                       shift and go to state 42
    empty                          shift and go to state 43

state 26

    (26) aggregate -> empty .
    (21) prop_gent -> empty .

    FROM            reduce using rule 26 (aggregate -> empty .)
    LOC_PREP        reduce using rule 26 (aggregate -> empty .)
    WITH            reduce using rule 26 (aggregate -> empty .)
    WITHOUT         reduce using rule 26 (aggregate -> empty .)
    EXCEPT          reduce using rule 26 (aggregate -> empty .)
    ADVB            reduce using rule 26 (aggregate -> empty .)
    VERB            reduce using rule 26 (aggregate -> empty .)
    INFN            reduce using rule 26 (aggregate -> empty .)
    PRTS            reduce using rule 26 (aggregate -> empty .)
    PRCL            reduce using rule 26 (aggregate -> empty .)
    COMP            reduce using rule 26 (aggregate -> empty .)
    DOT             reduce using rule 26 (aggregate -> empty .)
    COMMA           reduce using rule 26 (aggregate -> empty .)
    Ablt            reduce using rule 26 (aggregate -> empty .)
    AND             reduce using rule 26 (aggregate -> empty .)
    OR              reduce using rule 26 (aggregate -> empty .)
    DASH            reduce using rule 26 (aggregate -> empty .)
    RSBRACKET       reduce using rule 26 (aggregate -> empty .)
    Gent_noun_prtf__plur reduce using rule 21 (prop_gent -> empty .)


state 27

    (27) aggregate -> prop_gent . Gent_noun_prtf__plur aggregate

    Gent_noun_prtf__plur shift and go to state 45


state 28

    (28) aggregate -> LSBRACKET . aggregate op aggregate RSBRACKET aggregate
    (26) aggregate -> . empty
    (27) aggregate -> . prop_gent Gent_noun_prtf__plur aggregate
    (28) aggregate -> . LSBRACKET aggregate op aggregate RSBRACKET aggregate
    (3) empty -> .
    (21) prop_gent -> . empty
    (22) prop_gent -> . ADJF_gent prop_gent

    LSBRACKET       shift and go to state 28
    AND             reduce using rule 3 (empty -> .)
    OR              reduce using rule 3 (empty -> .)
    DASH            reduce using rule 3 (empty -> .)
    Gent_noun_prtf__plur reduce using rule 3 (empty -> .)
    ADJF_gent       shift and go to state 29

    aggregate                      shift and go to state 46
    empty                          shift and go to state 26
    prop_gent                      shift and go to state 27

state 29

    (22) prop_gent -> ADJF_gent . prop_gent
    (21) prop_gent -> . empty
    (22) prop_gent -> . ADJF_gent prop_gent
    (3) empty -> .

    ADJF_gent       shift and go to state 29
    Gent_noun_prtf__plur reduce using rule 3 (empty -> .)
    Loct            reduce using rule 3 (empty -> .)

    prop_gent                      shift and go to state 47
    empty                          shift and go to state 48

state 30

    (13) prop_noun -> prop NOUN . prop
    (17) prop -> . empty
    (18) prop -> . ADJF prop
    (19) prop -> . LPAREN prop op prop RPAREN prop
    (3) empty -> .
